# RSendMail

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_ja.md  README_zh-TW.md  README_zh.md  test_attachment_fix.sh
.github/workflows/: auto-add-to-m01.yml  build.yaml  release.yml
crates/rsendmail-cli/: Cargo.toml
crates/rsendmail-cli/src/: args.rs  logging.rs  main.rs
crates/rsendmail-core/: Cargo.toml
crates/rsendmail-core/src/: anonymizer.rs  config.rs  lib.rs  mailer.rs  stats.rs
crates/rsendmail-gui/: Cargo.toml  build.rs
crates/rsendmail-gui/i18n/: en-US.ftl  ja-JP.ftl  zh-CN.ftl  zh-TW.ftl
crates/rsendmail-gui/src/: i18n.rs  main.rs
crates/rsendmail-gui/ui/: app.slint
crates/rsendmail-gui/ui/components/: common.slint  config_panel.slint  monitoring_panel.slint
crates/rsendmail-i18n/: Cargo.toml
crates/rsendmail-i18n/locales/: en-US.yml  ja-JP.yml  ko-KR.yml  zh-CN.yml  zh-TW.yml
crates/rsendmail-i18n/src/: lib.rs
crates/rsendmail-tauri/: README.md  crop.py  package-lock.json  package.json  vite.config.ts
crates/rsendmail-tauri/src/: App.vue  i18n.ts  main.ts  style.css  vite-env.d.ts
crates/rsendmail-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/rsendmail-tauri/src-tauri/icons/: icon.icns
crates/rsendmail-tauri/src-tauri/src/: lib.rs  main.rs
crates/rsendmail-tauri/src/components/: ConfigPanel.vue  HelpDialog.vue  MonitoringPanel.vue
docs/: ARCHITECTURE.md  ARCHITECTURE_ja.md  ARCHITECTURE_zh-TW.md  ARCHITECTURE_zh.md  GUI_DESIGN.md  I18N_DESIGN.md
docs/superpowers/plans/: 2026-03-27-rsendmail-tauri-consolidation.md
rsendmail/: Cargo.toml
rsendmail/examples/: login_send.rs
rsendmail/src/: config.rs  mailer.rs  main.rs  stats.rs
