[package]
name = "rsendmail"
version = "0.1.0"
edition = "2021"
authors = ["RSendMail Contributors"]
description = "A high-performance bulk email sending CLI tool"

[dependencies]
mail-send = "0.5.0"
mail-parser = "0.10.2"
mail-builder = "0.3.2"
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.12", features = ["derive"] }
anyhow = "1.0.79"
walkdir = "2.4.0"
log = "0.4.20"
env_logger = "0.10.1"
chrono = "0.4.31"
num_cpus = "1.16.0"
futures = "0.3.30"
ctrlc = "3.4.1"
