[package]
name = "rsendmail-tauri"
description = "RSendMail desktop GUI powered by Tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rsendmail_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rsendmail-core = { path = "../../rsendmail-core" }
tokio = { workspace = true, features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
log.workspace = true
chrono.workspace = true
